@@ -54,6 +54,14 @@ $properties = array(
         'value' => 'active',
         'lexicon' => 'babel:properties',
     ),
+    array(
+        'name' => 'showUnpublished',
+        'desc' => 'babellinks.showUnpublished',
+        'type' => 'textfield',
+        'options' => '',
+        'value' => '0',
+        'lexicon' => 'babel:properties',
+    ),
 );
 
 return $properties;
