@@ -28,8 +28,9 @@
  *
  * @package babel
  * 
- * @param resourceId	optional: id of resource of which a translated resource should be determined. Default: current resource
- * @param contextKey	Key of context in which translated resource should be determined.
+ * @param resourceId		optional: id of resource of which a translated resource should be determined. Default: current resource
+ * @param contextKey		Key of context in which translated resource should be determined.
+ * @param showUnpublished	optional: flag whether to show unpublished translations. Default: 0
  */
 $babel = $modx->getService('babel','Babel',$modx->getOption('babel.core_path',null,$modx->getOption('core_path').'components/babel/').'model/babel/',$scriptProperties);
 
@@ -44,13 +45,14 @@ if(!empty($scriptProperties['resourceId'])) {
 	$resourceId = intval($modx->getOption('resourceId',$scriptProperties,$resourceId));
 }
 $contextKey = $modx->getOption('contextKey',$scriptProperties,'');
+$showUnpublished = $modx->getOption('showUnpublished',$scriptProperties,0);
 
 /* determine id of tranlated resource */
 $linkedResources = $babel->getLinkedResources($resourceId);
 $output = null;
 if(isset($linkedResources[$contextKey])) {
 	$resource = $modx->getObject('modResource',$linkedResources[$contextKey]);
-	if($resource && $resource->get('published') == 1) {
+	if($resource && ($showUnpublished || $resource->get('published') == 1)) {
 		$output = $resource->get('id');
 	}
 }
