@@ -1,5 +1,9 @@
 Changelog for Babel.
 
+Babel
+==============
+- Added showUnpublished parameter to BabelLinks and BabelTranslation snippets.
+
 Babel 2.2.1-rc1
 ==============
 - Added feature #11: User is redirect to new resource after creating a translation.
